Photo size fix t(b6.5) (#45)
* excluded synchronising css folder

* excluded synchronising css folder

* excluded synchronising css folder

* replaced some pictures with the new graphic

* swapping images

* finished swapping the pictures on all pages

* removed redundant variables

* correcting images in _intro

* while swapping imgs forgot to add one class modifier in phtos and form file - now it's fixed

* corrcted minor issues with pictures separators and fixed overflowing of the video container

* fixed missing separator between gallery and video

* created mixin for inner padding LR and mixin for the big buttons

* work in progres

* Style lint fixes

* creating mixins work in progress, added ruls to the stylelint file

* Update stylint and fix some complaints

* updating header mixin

*  header and paragraph mixins used in the files

* repeated previous commit after the pull from the master

* making menu bar for the tabet and desktop - WIP

* nav menu work in progress

* styled intro for the tablet

* work in progress

* changed margin in the elements

* made the website maximum 1200px width

* used flexbox to position position content in the middle of the window

* styled page wrapper for the desktop page

* corrected specaing in the nav menu

* corrected space indentation for the stylelint

* styled intro for Tablet and Desktop

* added background images for the different screen sizes

* styled preamble for tablet and desktop

* styling sightseeing block - work in progress

* work in progress

* work in progress

* styled sightseeing blocks, picture instead being added by picture tag were add asa a background-images

* styled the icons

* styled recommendation block for tablet and desktop

* styled whole block

* updated container names in sightseeing-group

* fixed 1px issue which was appearing underneath the photo of the bridge

--- a/sass/blocks/sightseeing/_sightseeing.scss
+++ b/sass/blocks/sightseeing/_sightseeing.scss
@@ -54,7 +54,7 @@
     &__inner {
       width: 24rem;
       padding-top: 4.5rem;
-      padding-bottom: 4.5rem;
+      padding-bottom: 4.4rem;
 
       &--separator {
         &::before {
